# PhD

./: .gitignore  II_PINNs.ipynb  IV_ImprovingTraining.ipynb  README.md  VI_UncertaintyPropagation.ipynb  _DetailedPlan.md  setup.cfg
.github/: copilot-instructions.md
chapters/: 03_1_SeparablePINNs.tex  III_ImprovingPINNs.ipynb  III_SPINN.ipynb  III_SPINN_Efficiency.tex  II_PINNs.ipynb  IV_MaterialCharacterization.ipynb
chapters/III_ImprovingPINNs/: 01_spinn_computation.ipynb  02_spinn_plate_example.ipynb  03_spinn_geo_mapping.ipynb  04_improving_spinn_ap.ipynb  05_improving_spinn_ac.ipynb  III_ImprovingPINNs.ipynb
chapters/III_ImprovingPINNs/tables/: ac_accuracy_cost_tradeoff.tex  ac_best_pinn_vs_spinn.tex  spinn_ap_forward_results.tex  spinn_efficiency_table.tex
chapters/III_SPINN/tables/: spinn_efficiency_table.tex
chapters/II_PINNs/: 01_pinn_intro.ipynb  02_jax_library.ipynb  03_poisson_equation.ipynb  04_plate_example.ipynb  II_PINNs.ipynb
chapters/IV_MaterialCharacterization/: IV_MaterialCharacterization.ipynb
chapters/IV_MaterialCharacterization/tables/: forward_results.tex
configs/: allen_cahn.yaml  analytical_plate.yaml
examples/allen_cahn/: allen_cahn_model.py
notebooks/: analytical_plate.ipynb
notebooks/analytical_plate/: analytical_plate.ipynb  analytical_plate_old.ipynb
results/IV_ImprovingTraining/: IV_2_FourierFeatures.pkl  IV_2_SelfAttention.pkl
src/examples/: __init__.py  allen_cahn.py
src/examples/data/: __init__.py
src/phd/: __init__.py
src/pinns_phd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_models.py
(+77 files in other folders)
