[metadata]
name = pinns-phd
version = 0.0.0
description = PINN thesis codebase and examples
author = Damien Bonnet

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    jax
    jaxlib
    flax
    optax
    deepxde
    pandas
    scienceplots
    wandb
    jupyter

[options.packages.find]
where = src
exclude = tests

[options.package_data]
examples = data/*.mat
